@@ -23,11 +23,12 @@ public class UpdateShardHandlerConfig {
   public static final int DEFAULT_MAXUPDATECONNECTIONS = 100000;
   public static final int DEFAULT_MAXUPDATECONNECTIONSPERHOST = 100000;
   public static final String DEFAULT_METRICNAMESTRATEGY = "queryLessURLAndMethod";
+  public static final int DEFAULT_MAXRECOVERYTHREADS = -1;
 
   public static final UpdateShardHandlerConfig DEFAULT
       = new UpdateShardHandlerConfig(DEFAULT_MAXUPDATECONNECTIONS, DEFAULT_MAXUPDATECONNECTIONSPERHOST,
                                      DEFAULT_DISTRIBUPDATESOTIMEOUT, DEFAULT_DISTRIBUPDATECONNTIMEOUT,
-                                      DEFAULT_METRICNAMESTRATEGY);
+                                      DEFAULT_METRICNAMESTRATEGY, DEFAULT_MAXRECOVERYTHREADS);
 
   private final int maxUpdateConnections;
 
@@ -39,13 +40,16 @@ public class UpdateShardHandlerConfig {
 
   private final String metricNameStrategy;
 
+  private final int maxRecoveryThreads;
+
   public UpdateShardHandlerConfig(int maxUpdateConnections, int maxUpdateConnectionsPerHost, int distributedSocketTimeout, int distributedConnectionTimeout,
-                                  String metricNameStrategy) {
+                                  String metricNameStrategy, int maxRecoveryThreads) {
     this.maxUpdateConnections = maxUpdateConnections;
     this.maxUpdateConnectionsPerHost = maxUpdateConnectionsPerHost;
     this.distributedSocketTimeout = distributedSocketTimeout;
     this.distributedConnectionTimeout = distributedConnectionTimeout;
     this.metricNameStrategy = metricNameStrategy;
+    this.maxRecoveryThreads = maxRecoveryThreads;
   }
 
   public int getMaxUpdateConnectionsPerHost() {
@@ -66,5 +70,9 @@ public class UpdateShardHandlerConfig {
 
   public String getMetricNameStrategy() {
     return metricNameStrategy;
+  }
+
+  public int getMaxRecoveryThreads() {
+    return maxRecoveryThreads;
   }
 }
